testsuite/poke.pkl/ass-diag-7.pk
/* { dg-do compile } */

var s = "abc";
s[1] = 'x'; /* { dg-error "invalid l-value" } */
